--- a/style.css
+++ b/style.css
@@ -541,8 +541,8 @@ body {
   gap: 10%;
 }
 
-/* lille skærm  */
-@media only screen and (max-width: 412px) {
+/* Iphone 15 pro */
+@media only screen and (max-width: 393px) and (max-height: 852px) {
   /* header */
   .header {
     height: 15vh;
@@ -585,7 +585,7 @@ body {
   /* striber */
   .vandfald_1 {
     margin-top: 56vh;
-    width: 26.5%;
+    width: 28%;
   }
   /* hvem */
   .container_1 {
@@ -722,59 +722,168 @@ body {
     padding: 15%;
   }
 }
-@media only screen and (max-width: 392px) {
+/* Samsung galaxy 8+   */
+@media only screen and (max-width: 360px) and (max-height: 740px) {
   /* striber */
   .vandfald_1 {
     margin-top: 56vh;
     width: 28%;
   }
   /* hvem */
-  .container_profil_2 {
-    padding-right: 6%;
+  .container_1 {
+    margin-top: 10%;
   }
-  /* footer */
-  .sm_logo {
-    width: 9%;
+  .hvem {
+    margin-left: 20%;
   }
-}
-@media only screen and (max-width: 372px) {
-  /* striber */
-  .vandfald_1 {
-    margin-top: 56vh;
-    width: 28%;
+  .rektangel_1 {
+    margin-top: 40%;
+    height: 49%;
+    width: 100%;
   }
-  /* hvem */
+  .vandfarve_effekt_1 {
+    width: 100%;
+    height: 33%;
+  }
   .profil-photo_1 {
-    width: 37%;
-    height: 34%;
+    width: 32%;
+    height: 30%;
+  }
+  .container_profil_1 {
+    margin-top: 42%;
+    padding-right: 8%;
   }
   .parent-container_2 {
-    height: 38vh;
+    height: 45vh;
+    padding-top: 5%;
+  }
+  .rektangel_2 {
+    margin-top: 8%;
+    height: 65%;
+    width: 100%;
+  }
+  .vandfarve_effekt_2 {
+    margin-bottom: 90%;
+    height: 54%;
+  }
+  .profil-photo_2 {
+    margin-bottom: 35vh;
   }
   .container_profil_2 {
-    padding-right: 0%;
+    margin-top: 7%;
+    margin-right: 2%;
+    margin-left: 7%;
+  }
+  .navn_2 {
+    font-size: 1.2rem;
+  }
+  .bio_2 {
+    font-size: 0.9rem;
+  }
+  .pil_op {
+    bottom: 5%;
+  }
+  .video_1_str {
+    width: 80vw;
+  }
+  /* ydelser */
+  .baggrund_ydelser {
+    border-radius: 10%;
+  }
+  .container_ydelser {
+    display: flex;
+    flex-direction: column;
+  }
+  .ydelser {
+    font-size: 1.2rem;
+  }
+  .video_2_str {
+    width: 80vw;
+    margin-left: 6%;
+  }
+  .ydelser_tekst {
+    font-size: 0.9rem;
+    width: 80vw;
+    margin-left: 10%;
+  }
+  .pil_op_højre {
+    bottom: -2%;
+  }
+  .pil_op_img_højre {
+    width: 8vw;
+  }
+  /* cases */
+  .cases {
+    font-size: 1rem;
+  }
+  .pil_cases {
+    width: 8vw;
+  }
+  .prikker_1 {
+    width: 10vw;
+  }
+  .pil_op_img {
+    width: 8vw;
+  }
+  /* footer */
+  .footer {
+    height: 15vh;
+  }
+  .footer_tekst {
+    font-size: 0.7rem;
+    margin-left: 3%;
+    padding-top: 5%;
+  }
+  .sm_logo {
+    margin-left: 85%;
+    display: flex;
+    flex-direction: column;
+    width: 9%;
+    padding-top: 2%;
+  }
+  #sm_logo_id {
+    padding: 15%;
   }
 }
-@media only screen and (max-width: 352px) {
+/* Iphone SE */
+@media only screen and (max-width: 320px) and (max-height: 568px) {
+  /* header */
+  .header_link a {
+    font-size: 0.9rem;
+  }
+  /* intro */
+  .baggrund_intro {
+    height: 90vh;
+  }
+  .form {
+    margin-top: 62vh;
+  }
   /* striber */
   .vandfald_1 {
     margin-top: 56vh;
-    width: 29%;
+    width: 30%;
   }
   /* hvem */
   .hvem {
-    margin-left: 10%;
+    margin-left: 4%;
   }
   .parent-container_1 {
     position: relative;
     height: 63vh;
   }
+  .vandfarve_effekt_1 {
+    margin-top: 2%;
+    height: 40%;
+  }
   .profil-photo_1 {
     width: 32%;
-    height: 28%;
+    height: 36%;
   }
   .rektangel_1 {
-    height: 35%;
+    height: 60%;
+  }
+  .container_profil_1 {
+    padding-top: 0%;
   }
   .navn_1 {
     font-size: 1rem;
@@ -783,22 +892,35 @@ body {
     font-size: 0.8rem;
   }
   .parent-container_2 {
-    height: 35vh;
+    height: 38vh;
+    margin-top: 22%;
   }
   .vandfarve_effekt_2 {
-    margin-bottom: 95%;
+    margin-bottom: 90%;
+    height: 70%;
   }
   .rektangel_2 {
-    height: 68%;
+    height: 90%;
   }
   .container_profil_2 {
-    padding-right: 3%;
+    padding-right: 2%;
+    padding-left: 5%;
   }
   .navn_2 {
     font-size: 1rem;
   }
   .bio_2 {
     font-size: 0.8rem;
+  }
+  .pil_op {
+    bottom: -8%;
+  }
+  /* footer */
+  .footer {
+    height: 18vh;
+  }
+  .sm_logo {
+    width: 10%;
   }
 }
 
