--- a/style.css
+++ b/style.css
@@ -542,57 +542,52 @@ body {
 }
 
 /* ipads og lign */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1180px) {
   /* header */
   .header {
-    height: 15vh;
+    height: 20vh;
   }
   .logo {
-    height: 8vh;
-    padding: 4%;
+    height: 10vh;
+    padding: 8%;
   }
   .wave {
-    height: 5vh;
-  }
-  .header_link {
-    gap: 0.2rem;
-    padding-bottom: 5%;
-    padding-right: 2%;
+    height: 7vh;
   }
   .header_link a {
-    font-size: 1rem;
+    font-size: 1.7rem;
   }
   /* intro */
   .baggrund_intro {
-    height: 70vh;
+    height: 82vh;
   }
   .overskrift_1, .overskrift_2 {
     padding-top: 5%;
-    font-size: 1.2rem;
+    font-size: 2rem;
   }
   .intro_text {
     padding-top: 2%;
-    font-size: 1rem;
+    font-size: 1.7rem;
   }
   .form {
-    margin-top: 46vh;
+    margin-top: 40vh;
     left: 0;
     width: 100%;
   }
   .form img {
-    width: 30vh;
+    width: 50vh;
   }
   /* striber */
   .vandfald_1 {
     margin-top: 56vh;
-    width: 25%;
+    width: 24%;
   }
   /* hvem */
   .container_1 {
     margin-top: 10%;
   }
   .hvem {
-    font-size: 1rem;
+    font-size: 2rem;
     justify-content: left;
     margin-left: 30%;
     max-width: fit-content;
@@ -602,67 +597,65 @@ body {
     height: 65vh;
   }
   .rektangel_1 {
-    margin-top: 40%;
-    height: 42%;
+    margin-top: 35%;
+    height: 47%;
     width: 100%;
   }
   .vandfarve_effekt_1 {
     width: 100%;
-    height: 33%;
+    height: 45%;
   }
   .profil-photo_1 {
-    width: 37%;
-    height: 36%;
-    margin-left: 30%;
+    width: auto;
+    height: 40%;
+    margin-left: 32%;
     top: 0%;
   }
   .container_profil_1 {
-    margin-top: 46%;
+    margin-top: 36%;
     padding-left: 7%;
   }
   .navn_1 {
-    font-size: 1.2rem;
+    font-size: 2rem;
   }
   .bio_1 {
-    font-size: 0.9rem;
+    font-size: 1.6rem;
   }
   .parent-container_2 {
     height: 45vh;
-    padding-top: 5%;
+    padding-top: 20%;
   }
   .rektangel_2 {
     margin-top: 8%;
-    height: 60%;
+    height: 64%;
     width: 100%;
   }
   .vandfarve_effekt_2 {
     width: 100%;
-    height: 60%;
-    margin-bottom: 80%;
-    left: 1%;
+    height: 68%;
+    margin-bottom: 62%;
   }
   .profil-photo_2 {
-    position: absolute;
-    width: 40%;
+    width: 35%;
     height: auto;
     margin-right: 33%;
-    margin-bottom: 30vh;
+    margin-bottom: 32%;
   }
   .container_profil_2 {
     margin-top: 8%;
-    padding-right: 8%;
+    padding-right: 20%;
   }
   .navn_2 {
-    font-size: 1.2rem;
+    font-size: 2rem;
   }
   .bio_2 {
-    font-size: 0.9rem;
+    font-size: 1.6rem;
   }
   .pil_op {
-    bottom: 5%;
+    bottom: -6%;
   }
   .video_1_str {
-    width: 80vw;
+    width: 80%;
   }
   /* ydelser */
   .baggrund_ydelser {
@@ -673,16 +666,16 @@ body {
     flex-direction: column;
   }
   .ydelser {
-    font-size: 1.2rem;
+    font-size: 2rem;
   }
   .video_2_str {
-    width: 80vw;
-    margin-left: 6%;
+    width: 90%;
+    margin-left: 5%;
   }
   .ydelser_tekst {
-    font-size: 0.9rem;
-    width: 80vw;
-    margin-left: 10%;
+    font-size: 1.6rem;
+    width: 80%;
+    margin-left: 6%;
   }
   .pil_op_højre {
     bottom: -2%;
@@ -692,7 +685,7 @@ body {
   }
   /* cases */
   .cases {
-    font-size: 1rem;
+    font-size: 2rem;
   }
   .pil_cases {
     width: 8vw;
@@ -705,10 +698,10 @@ body {
   }
   /* footer */
   .footer {
-    height: 15vh;
+    height: 20%;
   }
   .footer_tekst {
-    font-size: 0.7rem;
+    font-size: 1.2rem;
     margin-left: 3%;
     padding-top: 5%;
   }
@@ -723,18 +716,17 @@ body {
     padding: 15%;
   }
 }
-/* mobiler og andre små skærme */
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 768px) {
   /* header */
   .header {
-    height: 15vh;
+    height: 17vh;
   }
   .logo {
-    height: 8vh;
-    padding: 4%;
+    height: 12vh;
+    padding: 8%;
   }
   .wave {
-    height: 5vh;
+    height: 6vh;
   }
   .header_link {
     gap: 0.2rem;
@@ -742,7 +734,7 @@ body {
     padding-right: 2%;
   }
   .header_link a {
-    font-size: 1rem;
+    font-size: 1.6rem;
   }
   /* intro */
   .baggrund_intro {
@@ -750,14 +742,13 @@ body {
   }
   .overskrift_1, .overskrift_2 {
     padding-top: 5%;
-    font-size: 1.2rem;
+    font-size: 1.8rem;
   }
   .intro_text {
-    padding-top: 2%;
-    font-size: 1rem;
+    font-size: 1.6rem;
   }
   .form {
-    margin-top: 46vh;
+    margin-top: 67%;
     left: 0;
     width: 100%;
   }
@@ -767,46 +758,35 @@ body {
   /* striber */
   .vandfald_1 {
     margin-top: 56vh;
-    width: 28%;
+    width: 22%;
   }
   /* hvem */
   .container_1 {
-    margin-top: 10%;
+    margin-top: 6%;
   }
   .hvem {
-    font-size: 1rem;
-    justify-content: left;
-    margin-left: 30%;
-    max-width: fit-content;
-  }
-  .parent-container_1 {
-    position: relative;
-    height: 65vh;
+    font-size: 1.8rem;
+    margin-left: 26%;
   }
   .rektangel_1 {
-    margin-top: 40%;
-    height: 42%;
-    width: 100%;
+    margin-top: 30%;
   }
   .vandfarve_effekt_1 {
-    width: 100%;
-    height: 33%;
+    height: 43%;
   }
   .profil-photo_1 {
-    width: 37%;
-    height: 36%;
-    margin-left: 30%;
-    top: 0%;
+    width: auto;
+    height: 40%;
   }
   .container_profil_1 {
-    margin-top: 46%;
+    margin-top: 32%;
     padding-left: 7%;
   }
   .navn_1 {
-    font-size: 1.2rem;
+    font-size: 1.8rem;
   }
   .bio_1 {
-    font-size: 0.9rem;
+    font-size: 1.5rem;
   }
   .parent-container_2 {
     height: 45vh;
@@ -814,95 +794,317 @@ body {
   }
   .rektangel_2 {
     margin-top: 8%;
-    height: 60%;
+    height: 70%;
     width: 100%;
   }
   .vandfarve_effekt_2 {
-    width: 100%;
-    height: 60%;
-    margin-bottom: 80%;
-    left: 1%;
+    height: 65%;
+    margin-bottom: 60%;
   }
   .profil-photo_2 {
     position: absolute;
-    width: 40%;
+    width: 30%;
     height: auto;
-    margin-right: 33%;
-    margin-bottom: 30vh;
-  }
-  .container_profil_2 {
-    margin-top: 8%;
-    padding-right: 8%;
+    margin-right: 36%;
+    margin-bottom: 50%;
   }
   .navn_2 {
-    font-size: 1.2rem;
+    font-size: 1.8rem;
   }
   .bio_2 {
-    font-size: 0.9rem;
+    font-size: 1.5rem;
   }
   .pil_op {
-    bottom: 5%;
+    bottom: 0%;
   }
   .video_1_str {
-    width: 80vw;
+    width: 80%;
   }
   /* ydelser */
-  .baggrund_ydelser {
-    border-radius: 10%;
+  .ydelser {
+    font-size: 2rem;
   }
-  .container_ydelser {
-    display: flex;
-    flex-direction: column;
+  .video_2_str {
+    width: 80%;
+    margin-left: 10%;
   }
+  .ydelser_tekst {
+    font-size: 1.6rem;
+    margin-left: 10%;
+  }
+  /* cases */
+  .cases {
+    font-size: 2rem;
+  }
+  /* footer */
+  .footer {
+    height: 23%;
+  }
+  .footer_tekst {
+    font-size: 1.2rem;
+    margin-left: 5%;
+    padding-top: 6%;
+  }
+  #sm_logo_id {
+    padding: 15%;
+  }
+}
+/* mobiler og andre små skærme */
+@media only screen and (max-width: 500px) {
+  /* header */
+  .header {
+    height: 17vh;
+  }
+  .logo {
+    height: 10vh;
+    padding: 10%;
+  }
+  .wave {
+    height: 6vh;
+  }
+  .header_link {
+    gap: 0.2rem;
+    padding-right: 5%;
+  }
+  .header_link a {
+    font-size: 1rem;
+  }
+  /* intro */
+  .baggrund_intro {
+    height: 65vh;
+  }
+  .overskrift_1, .overskrift_2 {
+    font-size: 1.2rem;
+  }
+  .intro_text {
+    font-size: 1.1rem;
+  }
+  .form {
+    margin-top: 95%;
+  }
+  /* striber */
+  .vandfald_1 {
+    width: 28%;
+  }
+  /* hvem */
+  .container_1 {
+    margin-top: 2%;
+  }
+  .hvem {
+    font-size: 1.2rem;
+    margin-left: 18%;
+  }
+  .rektangel_1 {
+    margin-top: 40%;
+  }
+  .vandfarve_effekt_1 {
+    height: 35%;
+  }
+  .profil-photo_1 {
+    width: auto;
+    height: 30%;
+  }
+  .container_profil_1 {
+    margin-top: 45%;
+    padding-left: 5%;
+  }
+  .navn_1 {
+    font-size: 1.3rem;
+  }
+  .bio_1 {
+    font-size: 1.1rem;
+  }
+  .parent-container_2 {
+    height: 45vh;
+  }
+  .rektangel_2 {
+    margin-top: 8%;
+    height: 70%;
+    width: 100%;
+  }
+  .vandfarve_effekt_2 {
+    height: 48%;
+    margin-bottom: 100%;
+  }
+  .profil-photo_2 {
+    width: 40%;
+    margin-right: 32%;
+    margin-bottom: 75%;
+  }
+  .container_profil_2 {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .navn_2 {
+    font-size: 1.3rem;
+  }
+  .bio_2 {
+    font-size: 1.1rem;
+  }
+  .pil_op {
+    bottom: 6%;
+  }
+  .video_1_str {
+    width: 80%;
+  }
+  /* ydelser */
   .ydelser {
     font-size: 1.2rem;
   }
   .video_2_str {
-    width: 80vw;
-    margin-left: 6%;
+    width: 90%;
+    margin-left: 5%;
   }
   .ydelser_tekst {
-    font-size: 0.9rem;
-    width: 80vw;
+    font-size: 1.1rem;
     margin-left: 10%;
-  }
-  .pil_op_højre {
-    bottom: -2%;
-  }
-  .pil_op_img_højre {
-    width: 8vw;
   }
   /* cases */
   .cases {
-    font-size: 1rem;
-  }
-  .pil_cases {
-    width: 8vw;
-  }
-  .prikker_1 {
-    width: 10vw;
-  }
-  .pil_op_img {
-    width: 8vw;
+    font-size: 1.2rem;
   }
   /* footer */
-  .footer {
-    height: 15vh;
-  }
   .footer_tekst {
-    font-size: 0.7rem;
-    margin-left: 3%;
-    padding-top: 5%;
+    font-size: 0.8rem;
+    margin-left: 5%;
+    padding-top: 3%;
   }
-  .sm_logo {
-    margin-left: 85%;
-    display: flex;
-    flex-direction: column;
-    width: 9%;
-    padding-top: 2%;
+}
+/* mobiler og andre små skærme */
+@media only screen and (max-width: 430px) {
+  /* header */
+  .header {
+    height: 17vh;
   }
-  #sm_logo_id {
-    padding: 15%;
+  /* intro */
+  .baggrund_intro {
+    height: 65vh;
+  }
+  .overskrift_1, .overskrift_2 {
+    font-size: 1.3rem;
+  }
+  .intro_text {
+    font-size: 1.2rem;
+  }
+  .form {
+    margin-top: 100%;
+  }
+  /* striber */
+  .vandfald_1 {
+    width: 27%;
+  }
+}
+/* mobiler og andre små skærme */
+@media only screen and (max-width: 390px) {
+  /* header */
+  .header {
+    height: 17vh;
+  }
+  /* intro */
+  .baggrund_intro {
+    height: 60vh;
+  }
+  .form {
+    margin-top: 100%;
+    margin-left: 20%;
+  }
+  .form img {
+    width: 20vh;
+  }
+  /* striber */
+  .vandfald_1 {
+    width: 27.5%;
+  }
+  /* hvem */
+  .parent-container_2 {
+    height: 40vh;
+  }
+  .navn_1 {
+    font-size: 1.1rem;
+  }
+  .bio_1 {
+    font-size: 1rem;
+  }
+  .vandfarve_effekt_2 {
+    height: 60%;
+    margin-bottom: 90%;
+  }
+  .profil-photo_2 {
+    width: 38%;
+    height: auto;
+    margin-bottom: 65%;
+  }
+  .navn_2 {
+    font-size: 1.1rem;
+  }
+  .bio_2 {
+    font-size: 1rem;
+  }
+  .pil_op {
+    bottom: 3%;
+  }
+}
+/* mobiler og andre små skærme */
+@media only screen and (max-width: 375px) {
+  /* header */
+  .header {
+    height: 17vh;
+  }
+  /* intro */
+  .baggrund_intro {
+    height: 60vh;
+  }
+  .overskrift_1, .overskrift_2 {
+    font-size: 1rem;
+  }
+  .intro_text {
+    font-size: 0.9rem;
+  }
+  .form {
+    margin-top: 70%;
+    margin-left: 0%;
+  }
+  .form img {
+    width: 30vh;
+  }
+  /* striber */
+  .vandfald_1 {
+    width: 27%;
+  }
+  /* hvem */
+  .parent-container_2 {
+    height: 40vh;
+  }
+  .profil-photo_1 {
+    height: 35%;
+    margin-bottom: 50%;
+  }
+  .navn_1 {
+    font-size: 1.1rem;
+  }
+  .bio_1 {
+    font-size: 0.8rem;
+  }
+  .vandfarve_effekt_2 {
+    height: 60%;
+    margin-bottom: 80%;
+  }
+  .profil-photo_2 {
+    width: 34%;
+    height: auto;
+    margin-bottom: 50%;
+  }
+  .container_profil_2 {
+    padding-right: 14%;
+  }
+  .navn_2 {
+    font-size: 1.1rem;
+  }
+  .bio_2 {
+    font-size: 0.8rem;
+  }
+  .pil_op {
+    bottom: 3%;
   }
 }
 
